--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         <div class="input-field">
             <label>Date de naissance</label>
-            <input type="text" placeholder="there is error on date " required>
+            <input type="date" placeholder="date de naissance " required>
         </div>
         <div class="input-field">
             <label>Numéro de téléphone</label>
